# tracevault

./: .gitignore  BUILD-SPEC.md  README.md  pyproject.toml  requirements.txt
examples/: demo_agent.py
tests/: conftest.py  test_api.py  test_chain.py  test_interceptor.py  test_storage.py  test_summarizer.py
tracevault/: __init__.py  chain.py  cli.py  interceptor.py  models.py  storage.py  summarizer.py
tracevault/server/: app.py
tracevault/server/static/: style.css
tracevault/server/templates/: base.html  session_detail.html  sessions.html
